--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-22 15:14:32 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-23 21:52:52 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{sbt14,
+	Author = {sbt},
+	Date-Added = {2015-02-23 20:33:59 +0000},
+	Date-Modified = {2015-02-23 20:52:52 +0000},
+	Month = {12},
+	Title = {sbt - The Interactive Build Tool URL: \{http://www.scala-sbt.org}},
+	Year = {2014. \note{Aufgerufen am 12.02.2015}}}
+
+@misc{mav14,
+	Author = {Apache Maven},
+	Date-Added = {2015-02-23 20:31:59 +0000},
+	Date-Modified = {2015-02-23 20:33:14 +0000},
+	Month = {12},
+	Title = {Apache Maven Project URL: \{http://maven.apache.org}},
+	Year = {2014. \note{Aufgerufen am 12.02.2015}}}
 
 @misc{hdfs12,
 	Author = {Apache Hadoop},
